# ReachKit

./: .gitignore  README.md  pyproject.toml
docs/: README.ja.md  README.ko.md  README.zh-CN.md
examples/: stdio-request.jsonl
scripts/: audit-public-surface.ps1
src/reachkit/auth/: __init__.py  checks.py  models.py
src/reachkit/channels/: __init__.py  diagnostics.py  models.py  registry.py
src/reachkit/cli/: app.py
src/reachkit/config/: __init__.py  paths.py  settings.py
src/reachkit/core/: errors.py  formatting.py  models.py
tests/: test_audit_gate.py  test_auth_config.py  test_basic_gap_features.py  test_basic_gap_stdio.py  test_bilibili_source.py  test_browser_source.py  test_channels_framework.py  test_cli_doctor.py  test_cli_github.py  test_cli_platform_sources.py  test_cli_read_rss.py  test_cli_read_url.py  test_cli_serve.py  test_cli_smoke.py  test_cli_xiaohongshu.py  test_config_settings.py  test_cookie_file.py  test_doctor.py  test_formatting.py  test_github_source.py  test_html_text.py  test_http_runtime.py  test_models.py  test_phase4_cli.py  test_phase4_sources.py  test_phase5_cli.py  test_phase5_sources.py  test_phase6_cli.py  test_phase6_sources.py  test_phase7_stdio_tools.py  test_public_exports.py  test_rss_source.py  test_setup_lifecycle.py  test_source_registry.py  test_stdio_server.py  test_text_normalization.py  test_web_cookie_source.py  test_web_source.py  test_x_source.py  test_xiaohongshu_source.py  (+1 more)
tests/fixtures/: github-file.json  github-repo.json  github-search.json  sample-atom.xml  sample-html.html  sample-rss.xml
(+55 files in other folders)
